# channel-server

./: .gitignore  Cargo.toml  README.md
assets/: channel-config.ini  channel-server.service
src/: main.rs  settings.rs
src/author/: author.rs  mod.rs  stream_data.rs
