[package]
name = "channel-server"
version = "0.1.0"
authors = ["Nareph <nmenadjou@iotaorigin.de>"]
description = "Example of a project using IOTA Streams"
readme = "README.md"
license = "MPL 2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }
iota-streams = { git = "https://github.com/iotaledger/streams", branch  = "chrysalis-2"}
rand = "0.7.3"
serde_json = "1.0.53"
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "^0.12"
chrono = { version = "^0.4", features = ["serde"]}
log4rs = "1.0.0"
config = "0.10"
lazy_static = "1.4"

[profile.release]
lto = true
opt-level = 3

[package.metadata.deb]
maintainer = "Nareph <nmenadjou@iotaorigin.de>"
copyright = "2021, iotaOrigin"
depends = "$auto, systemd"
conf-files = ["/usr/local/etc/channel-config.ini", "/etc/systemd/system/channel-server.service"]
extended-description = """\
web server to communicate with iota tangle written in rust.\
"""
section = "admin"
priority = "optional"
assets = [
    ["target/release/channel-server", "/usr/local/bin/", "755"],
    ["assets/channel-config.ini", "/usr/local/etc/", "644"],
    ["assets/channel-server.service", "/etc/systemd/system/", "644"],
]